[package]
name = "ws-gonzale"
version = "0.1.2"
authors = ["Christoffer Lantz <christoffer.lantz@filmskaparna.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["websocket-server", "websocket"]
description = "Naive websocket server implemented using async / await"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = "1.6.2"
async-net = "0.1"
async-channel = "1.1.1"
async-trait = "0.1.36"

sha1 = "0.6.0"
base64 = "0.12.3"

[[example]]
name = "life-cycle"
path = "examples/life-cycle/src/main.rs"