[package]
name = "life-cycle"
version = "0.1.0"
authors = ["Christoffer Lantz <christoffer.lantz@filmskaparna.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["websocket-server", "websocket"]
workspace = "../../"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws-gonzale = { path = "../../" }